--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gitee.com/insall/ipa-install/blob/master/DaShiDai.ipa</string>
+					<string>https://github.com/ios-install/KLine/blob/main/DaShiDai.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://gitee.com/insall/ipa-install/blob/master/57.png</string>
+					<string>https://github.com/ios-install/KLine/blob/main/57.png.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://gitee.com/insall/ipa-install/blob/master/512.png</string>
+					<string>https://github.com/ios-install/KLine/blob/main/512.png.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
